<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  android:layout_weight="1">


    <LinearLayout android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="5dp">

        <EditText android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" android:hint="@string/hint_name"
            ></EditText>


        <TextView android:id="@+id/addressTextView"
            android:color="@android:color/black" android:textSize="18sp"
            android:paddingTop="10dp" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"></TextView>


        <EditText android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone" android:hint="@string/hint_location"
            android:inputType="textPostalAddress|textCapWords"></EditText>

        <EditText android:id="@+id/dateTimEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" android:hint="@string/hint_dateTime"
            ></EditText>






        <Button android:id="@+id/saveEventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_save_event"></Button>

    </LinearLayout>
</ScrollView>