<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mvc.app.ViewActivity.ViewEventActivity" >

    <item android:id="@+id/addEventItem"
        android:title="@string/menuitem_add_event"
        android:icon="@android:drawable/ic_menu_add"
        android:titleCondensed="@string/menuitem_add_event"
        android:alphabeticShortcut="a"
        app:showAsAction="ifRoom" ></item> <!-- for Action Bar -->


    <item android:id="@+id/listEventItem"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menuitem_list_event"
        android:alphabeticShortcut="l"
        app:showAsAction="ifRoom" ></item>

    <item android:id="@+id/editItem"
        android:title="@string/menuitem_edit_poi"
        android:orderInCategory="1" android:alphabeticShortcut="e"
        android:titleCondensed="@string/menuitem_edit_poi"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom"></item>  <!-- for Action Bar -->

    <item android:id="@+id/deleteItem"
        android:title="@string/menuitem_delete_poi"
        android:orderInCategory="2" android:alphabeticShortcut="d"
        android:titleCondensed="@string/menuitem_delete_poi"
        android:icon="@android:drawable/ic_delete"
        app:showAsAction="ifRoom"></item>   <!-- for Action Bar -->

</menu>
