<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:layout_weight="5">
-->
    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" android:layout_margin="5dp">
        <TableRow android:id="@+id/nameTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/nameLabelTextView"
                android:text="@string/label_name"  android:paddingTop="10dp" android:textSize="15sp"></TextView>
            <TextView android:id="@+id/nameTextView" android:paddingTop="10dp" android:textColor="@android:color/black" android:textSize="15sp" >
            </TextView>
        </TableRow>



        <TableRow android:id="@+id/dateTimeTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/dateTimeLabelTextView"
                android:text="@string/label_dateTime"  android:paddingTop="10dp" android:textSize="15sp"></TextView>
            <TextView android:id="@+id/dateTimeTextView"
                android:paddingTop="10dp" android:textSize="15sp" android:textColor="@android:color/black" ></TextView>
        </TableRow>


        <TableRow android:id="@+id/locationTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/locationLabelTextView"
                android:text="@string/label_location"  android:paddingTop="10dp" android:textSize="15sp"></TextView>
            <TextView android:id="@+id/locationTextView" android:textColor="@android:color/black" android:paddingTop="10dp" android:textSize="15sp" ></TextView>
        </TableRow>
    </TableLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </RelativeLayout>


</LinearLayout>
